--- a/public/index.html
+++ b/public/index.html
@@ -76,13 +76,15 @@
       <hr />
       <section class="section examples">
         <h2 class="title">Example of use</h2>
+        <code class="code">nodecdn.com/react/react.js</code>
+        <br />
+        <code class="code">nodecdn.com/react@18.0.0/react.js</code>
+        <br />
         <code class="code">nodecdn.com/:packageName@:packageVersion/:file</code>
         <br />
         <code class="code"
           >nodecdn.com/:packageName/:file &#8212; latest package version</code
         >
-        <br />
-        <code class="code">nodecdn.com/react@18.0.0/react.js</code>
       </section>
       <hr />
       <section class="section cache">
